# osarg-rs

./: .justfile  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: parse.rs
examples/: README.md  basic.rs  optional_values.rs  passthrough.rs  repeated_options.rs
scripts/: size-bench.sh
src/: arg.rs  error.rs  help.rs  lib.rs  parser.rs  standard.rs  tests.rs  value.rs
tests/: basic.rs  help_version.rs  optional_values.rs  passthrough.rs  repeated_options.rs  unix_non_utf8.rs
tests/common/: mod.rs
